Carrinho controller e yaml updated
